# aktrack-slicer

./: .gitignore  CMakeLists.txt  README.md
ControlRoom/: CMakeLists.txt  ControlRoom.py
ControlRoom/ControlRoomLib/: UtilConnections.py  UtilConnectionsWtNnBlcRcv.py  UtilSlicerFuncs.py
ControlRoom/Resources/Configs/: BoardModel.STL  SubjectConfig.json  TrackerIndicatorModel.STL
ControlRoom/Resources/UI/: ControlRoom.ui
